--- a/ex07.html
+++ b/ex07.html
@@ -17,16 +17,17 @@
         <h1>{{ User.titulo }}</h1>
         <form action="post"></form>
         <label for="nome">
-            <input type="text" ng-model="form.User.name" placeholder="Nome">
+            <input type="text" ng-model="User.form.name" placeholder="Nome">
         </label>
         <label for="email">
-            <input type="email" ng-model="form.User.email" placeholder="Email">
+            <input type="email" ng-model="User.form.email" placeholder="Email">
         </label>
         <label for="idade">
-            <input type="text" ng-model="form.User.idade" placeholder="Idade">
+            <input type="text" ng-model="User.form.idade" placeholder="Idade">
         </label>
         </form>
-        <button type="submit" class="btn btn-large green waves-effect waves-light cols12" ng-click="User.addUser(form.User)">ADD USER</button>
+        <button type="submit" class="btn btn-large green waves-effect waves-light cols12" ng-click="User.addUser(User.form)">ADD USER</button>
+        <button type="submit" class="btn btn-large blue waves-effect waves-light cols12" ng-click="User.save(User.form)">SAVE</button>
 
         <label><input ng-model="searchUser" placeholder="Busca"></label>
 
@@ -39,13 +40,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="user in User.users | orderBy:User.predicate | filter:searchUser">
+                <tr ng-repeat="user in User.users | filter:searchUser track by $index">
                     <td>
                         <input type="checkbox" name="delete"id="user-{{$index}}" ng-model="user.selecionado" >
                         <label for="user-{{$index}}"></label>
                     </td>
                     <td ng-repeat="(key, value) in user">{{value}}</td>
                 </td>
+                <td><button ng-click="User.edit(user, $index)"class="btn blue waves-effect waves-light cols12" type="submit" >EDIT</button></td>
                 </tr>
             </tbody>
         </table>
@@ -108,6 +110,8 @@
                 idade: 23
             }];
 
+            vm.editing = false;
+            
             vm.addUser = function(user) {
                 console.log('user', user);
                 vm.users.push(user);
@@ -134,6 +138,23 @@
 
            vm.remove = function(users) {
                vm.users = users.filter((el) => { return !el.selecionado });
+           }
+
+           vm.edit = function(user, index) {
+               vm.form = angular.copy(user);
+               vm.form.index = index;
+           }
+
+           vm.save = function(user) {
+                var users = vm.users.map(function(el, i) {
+                    if(i === user.index) {
+                        delete user.index;
+                        console.log(user, "aqui");
+                        return user;
+                    }
+                    return el;
+                });         
+                vm.users = users;
            }
         }
 
